# llm-holdem-tournament

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  PRODUCT_REQUIREMENTS.md  README.md  ROADMAP.md  justfile
backend/: pyproject.toml
backend/src/llm_holdem/: __init__.py  config.py  logging_config.py  main.py
backend/src/llm_holdem/agents/: action_agent.py  chat_agent.py  context.py  cost_tracking.py  profiles.py  prompt.py  registry.py  schemas.py  validator.py
backend/src/llm_holdem/api/: messages.py  routes.py  schemas.py  websocket_handler.py
backend/src/llm_holdem/db/: database.py  models.py  persistence.py  repository.py
backend/src/llm_holdem/game/: betting.py  blinds.py  coordinator.py  dealer.py  engine.py  evaluator.py  pot.py  state.py  timer.py  tournament.py  turn.py
backend/tests/test_agents/: test_action_agent.py  test_chat_agent.py  test_context.py  test_cost_tracking.py  test_profiles.py  test_prompt.py  test_registry.py  test_validator.py
backend/tests/test_api/: test_routes.py  test_websocket.py
backend/tests/test_db/: test_models.py  test_persistence.py  test_repository.py
backend/tests/test_game/: test_betting.py  test_blinds.py  test_coordinator.py  test_dealer.py  test_engine.py  test_evaluator.py  test_pot.py  test_timer.py  test_tournament.py  test_turn.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/: App.css  App.tsx
frontend/src/hooks/: useGameActions.ts  useTimer.ts  useWebSocket.ts
frontend/src/services/: api.ts  websocket.ts
(+68 files in other folders)
